# space-carving

./: .gitignore  Cargo.toml  README.md  dinoRing.json  dockerfile  render.mpg  templeRing.json
media/: carving2.mpg
scripts/: render.py  renderOptions.json  requirements.txt  viz.py
src/: brdf.rs  carve.rs  exporter.rs  importer.rs  main.rs  misc.rs  ply.rs  view.rs  volume.rs
