[package]
name = "space-carving"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
nalgebra-glm = "0.16.0"
indicatif = "0.16.2"
clap = { version = "3.0.7", features = ["derive"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
